# talk-dependency-injector

./: .gitignore  LICENSE  README.md  naive.py  pyproject.toml  test_naive.py
tests/container/: test_container.py
tests/enumerators/: test_sequence_enumerator.py  test_time_enumerator.py
tests/factories/: test_task_factory.py
tests/printers/: test_csv_printer.py  test_text_printer.py
tests/repositories/: test_tasks_repository.py
tests/use_cases/: test_create_task.py  test_delete_task.py  test_edit_task.py  test_print_tasks.py  test_set_priority.py
todopy/: cli.py  container.py  settings.py
todopy/enumerators/: __init__.py  base.py  sequence.py  time.py
todopy/factories/: __init__.py  task.py
todopy/models/: __init__.py  priority.py  task.py
todopy/printers/: __init__.py  base.py  csv.py  text.py
todopy/repositories/: __init__.py  tasks.py
todopy/resources/: __init__.py  tasks_shelf.py
todopy/use_cases/: __init__.py  create_task.py  delete_task.py  edit_task.py  print_tasks.py  set_priority.py
