[tool.poetry]
name = "todopy"
version = "0.1.0"
description = "An example for 'Dependency Injection (DI) with dependency-injector' talk."
authors = ["Oleksandr Polieno <polyenoom@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.7.0"
dependency-injector = "^4.40.0"
pydantic = {extras = ["dotenv"], version = "^1.10.2"}
pytz = "^2022.7"
termcolor = "^2.1.1"

[tool.poetry.group.dev.dependencies]
black = {extras = ["d"], version = "^22.12.0"}
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
todopy = "todopy.cli:app"
